# readguides

./: .gitignore  .gitmodules  README.md  gen_pages.py  main.py  mkdocs.yml  pyproject.toml  requirements.txt  update_submodules.py
.github/workflows/: main.yml  rss-command-monitor.yml  update-submodules.yml
automation/: generate_discussion_map.py  rss_patch_command_monitor.py  update_submodules.py
discussion_mapper/: url_fixes.json
docs/: .nav.yml  index.md  tags.md
docs/commands/: index.md
docs/datatypes/: index.md
docs/js/: random-image.js
docs/plugins/: index.md
docs/projects/: aqo  artisansprize  kissassist  mq2aaspend  mq2advpath  mq2afnuke  mq2autoaccept  mq2autocamp  mq2autoclaim  mq2autoforage  mq2autogroup  mq2autoloot  mq2autosize  mq2bandolier  mq2bardswap  mq2boxr  mq2camera  mq2cast  mq2clipboard  mq2collections  mq2cpuload  mq2cursor  mq2cwtnbuffs  mq2dannet  mq2debuffs  mq2discord  mq2dpsadv  mq2easyfind  mq2eqbc  mq2events  mq2exchange  mq2farmtest  mq2feedme  mq2gmcheck  mq2grind  mq2groundspawns  mq2groupinfo  mq2heals  mq2hudmove  mq2ice  (+44 more)
docs/scripts/: index.md
docs/stylesheets/: extra.css
docs/tlos/: index.md
hooks/: aqo_hooks.py  datatype-inheritance.json  macro_injector_hooks.py  metadata_hooks.py  mkdocs_hooks.py  optional_hooks.py  overlap-commands.json  rg_hooks.py
overrides/: main.html
overrides/partials/: source.html
patch_command_parser/: rss_patch_command_monitor.py
